--- a/app/src/main/res/layout/store.xml
+++ b/app/src/main/res/layout/store.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     android:background="@android:color/holo_purple"
     android:gravity="center"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/loading">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/my_recycler_view"
